# Osmo-GPS-Controller-Demo

./: .gitignore  README.md  README_CN.md  devkit-onebutton-v3.1.patch
ble/: ble.c
data/: data.c  data.h
docs/: ASSEMBLY.md  COMPLIANCE_NOTES.md  OPEN_SOURCE_NOTICES.md  PRODUCT.md  Q&A.md  Q&A_CN.md  TEST_PLAN.md  getting_started_guide.md  getting_started_guide_CN.md  protocol.md  protocol_CN.md  protocol_data_segment.md  protocol_data_segment_CN.md
logic/: command_logic.c  command_logic.h  connect_logic.c  enums_logic.c  enums_logic.h  gps_logic.c  key_logic.c  key_logic.h  light_logic.c  light_logic.h  product_config.h  product_nvs.c  product_nvs.h  status_logic.c  status_logic.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
protocol/: dji_protocol_data_descriptors.c  dji_protocol_data_descriptors.h  dji_protocol_data_processor.c  dji_protocol_data_structures.h  dji_protocol_parser.c
test/connect_cmd_frame_builder/: Makefile  README.md  connect_cmd_frame.txt  connect_cmd_frame_builder  connect_cmd_frame_builder.c
test/frame_check/: Makefile  README.md  frame_check  frame_check.c  test_examples.sh
